# ed25519-serde

./: Cargo.toml
src/: main.rs
