[package]
name = "ed25519-serde"
version = "0.1.0"
authors = ["Chris Beck <beck.ct@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ed25519-dalek = { version = "1.0", features = ["serde"] }
serde_cbor = "0.10"
